# citro2d-rs

./: Cargo.toml  README.md
citro2d/: Cargo.toml
citro2d-sys/: Cargo.toml  build.rs
citro2d-sys/src/: lib.rs
citro2d/src/: base.rs  color.rs  font.rs  frame.rs  image.rs  lib.rs  render.rs  sprite.rs  spritesheet.rs  text.rs
citro2d/src/frame/: scene.rs
